# caribou

./: .gitignore  .readthedocs.yml  CMakeLists.txt  README.md  caribou.dockerfile  runSofa.ini  ubuntu_builder_18.04.dockerfile  ubuntu_builder_20.04.dockerfile
Benchmark/: CMakeLists.txt  (+3 more)
Benchmark/SofaCaribou/: CMakeLists.txt  init.cpp
Benchmark/SofaCaribou/Solver/: beam_cg_linear_solvers.py  fat_direct_linear_solvers.py
bindings/Plugin/: CMakeLists.txt  SofaCaribou.cpp
bindings/Plugin/Forcefield/: FictitiousGridElasticForce.h
bindings/Plugin/Ode/: LegacyStaticODESolver.cpp  StaticODESolver.cpp
bindings/Plugin/Solver/: ConjugateGradientSolver.cpp
bindings/Plugin/Topology/: FictitiousGrid.cpp
plugin/: CMakeLists.txt  InitCaribou.cpp
plugin/Engine/: CutGridEngine.cpp  CutGridEngine.h
plugin/Event/: IterativeSolverEvent.h
plugin/Forcefield/: FEMForcefield.cpp  FEMForcefield.h  IBMForcefield.cpp  IBMForcefield.h  PressureForcefield.cpp
plugin/Helper/: Hexahedron.h  MirtichIntegration.h
plugin/Python/: PythonEventBinder.cpp  PythonEventBinder.h  SofaCaribouBindings.h
plugin/Python/Bindings/: PythonEventBinder.cpp
plugin/Solver/: NewtonRaphsonSolver.cpp  PardisoSolver.h
python/sofa/: CMakeLists.txt  helper.h  macros.h  sofa.cpp
python/sofa/core/: __init__.cpp  __init__.h
python/sofa/simulation/: Base.cpp  Simulation.h  __init__.cpp  __init__.h
src/Caribou/: CMakeLists.txt  CaribouConfig.cmake.in  Traits.h  config.h  config.h.in  macros.h
src/Caribou/Algebra/: Algebra.cpp  AlgebraConfig.cmake.in  CMakeLists.txt  Matrix.h  Matrix.inl  SquareMatrix.h  Tensor.h  Vector.h
src/Caribou/Components/: CMakeLists.txt
src/Caribou/Config/: CMakeLists.txt  ConfigConfig.cmake.in  config.h.in  macros.h.in  traits.h.in
src/Caribou/Geometry/: BaseHexahedron.h  BaseQuad.h  BaseRectangularHexahedron.h  BaseRectangularQuad.h  BaseSegment.h  BaseTetrahedron.h  BaseTriangle.h  Beam.h  CMakeLists.txt  Element.h  Entity.h  GeometryConfig.cmake.in  Hexahedron.h  Hexahedron20.h  Hexahedron_FEniCS.h  Hexahedron_FEniCS20.h  LinearHexahedron.h  LinearRegularHexahedron.h  Node.h  Point.h  Polygon.h  Quad.h  Quad8.h  RectangularHexahedron.h  RectangularHexahedron20.h  RectangularQuad.h  RectangularQuad8.h  Segment.h  Segment3.h  Tetrahedron.h  Tetrahedron10.h  Traits.h  Triangle.h  Triangle6.h
src/Caribou/Mechanics/: CMakeLists.txt  MechanicsConfig.cmake.in
src/Caribou/Plugin/: CMakeLists.txt  init.cpp
src/Caribou/Python/: CMakeLists.txt  Caribou.cpp  Caribou.h  PythonConfig.cmake.in  __init__.py
src/Caribou/Topology/: BarycentricContainer.h  BaseDomain.h  BaseMesh.h  CMakeLists.txt  Domain.h  Grid.cpp  Grid.h  Grid.inl  HashGrid.h  Mesh.h  TopologyConfig.cmake.in  UnstructuredMesh.cpp  UnstructuredMesh.h  config.h.in
src/Geometry/: BaseQuad.h  BaseRectangularQuad.h  BaseSegment.h  BaseTetrahedron.h  BaseTriangle.h  CMakeLists.txt  Hexahedron.h  RectangularQuad.h
src/Mechanics/: CMakeLists.txt
src/Mechanics/Elasticity/: Strain.h
src/Plugin/: CMakeLists.txt  PluginConfig.cmake.in  config.h.in
src/Plugin/Algebra/: BaseVectorOperations.cpp  BaseVectorOperations.h  EigenMatrix.h  EigenMatrixWrapper.h  EigenVector.h
src/Plugin/Forcefield/: FictitiousGridElasticForce.cpp  FictitiousGridElasticForce.h  FictitiousGridHyperelasticForce.cpp  FictitiousGridHyperelasticForce.h  HexahedronElasticForce.cpp  HexahedronElasticForce.h  HyperelasticForcefield.cpp  HyperelasticForcefield.h  HyperelasticForcefield.inl  TetrahedronElasticForce.cpp  TetrahedronElasticForce.h  TractionForce.cpp  TractionForce.h
src/Plugin/Material/: HyperelasticMaterial.cpp  HyperelasticMaterial.h
src/Plugin/Ode/: BackwardEulerODESolver.cpp  BackwardEulerODESolver.h  LegacyStaticODESolver.cpp  LegacyStaticODESolver.h  NewtonRaphsonSolver.cpp  NewtonRaphsonSolver.h  StaticODESolver.cpp  StaticODESolver.h
src/Plugin/Solver/: ConjugateGradientSolver.cpp  ConjugateGradientSolver.h  EigenSolver.h  EigenSolver.inl  EigenSparseSolver.h  EigenSparseSolver.inl  LDLTSolver.cpp  LDLTSolver.h  LDLTSolver.inl  LLTSolver.cpp  LLTSolver.h  LLTSolver.inl  LUSolver.cpp  LUSolver.h  LUSolver.inl  LinearSolver.h
src/Plugin/Topology/: CircleIsoSurface.h  CylinderIsoSurface.h  FictitiousGrid.cpp  FictitiousGrid.h  FictitiousGrid.inl  IsoSurface.cpp  IsoSurface.h  SphereIsoSurface.h
src/Plugin/Visitor/: AssembleGlobalMatrix.cpp  AssembleGlobalMatrix.h  ConstrainGlobalMatrix.h  MultiVecEqualVisitor.cpp  MultiVecEqualVisitor.h
src/SofaCaribou/: CMakeLists.txt  SofaCaribouConfig.cmake.in  Traits.h  config.h.in  init.cpp
src/SofaCaribou/Algebra/: BaseMatrixOperations.h  BaseVectorOperations.cpp  BaseVectorOperations.h  EigenMatrix.h  EigenMatrixWrapper.h  EigenVector.h
src/SofaCaribou/Components/: CMakeLists.txt
src/SofaCaribou/Forcefield/: CaribouForcefield.h  CaribouForcefield.inl  CaribouForcefield[Hexahedron20].cpp  CaribouForcefield[Hexahedron20].h  CaribouForcefield[Hexahedron].cpp  CaribouForcefield[Hexahedron].h  CaribouForcefield[Hexahedron_FEniCS20].cpp  CaribouForcefield[Hexahedron_FEniCS20].h  CaribouForcefield[Hexahedron_FEniCS].cpp  CaribouForcefield[Hexahedron_FEniCS].h  CaribouForcefield[Quad8].cpp  CaribouForcefield[Quad8].h  CaribouForcefield[Quad].cpp  CaribouForcefield[Quad].h  CaribouForcefield[Tetrahedron10].cpp  CaribouForcefield[Tetrahedron10].h  CaribouForcefield[Tetrahedron].cpp  CaribouForcefield[Tetrahedron].h  CaribouForcefield[Triangle6].cpp  CaribouForcefield[Triangle6].h  CaribouForcefield[Triangle].cpp  CaribouForcefield[Triangle].h  FictitiousGridElasticForce.cpp  FictitiousGridElasticForce.h  FictitiousGridHyperelasticForce.cpp  FictitiousGridHyperelasticForce.h  HexahedronElasticForce.cpp  HexahedronElasticForce.h  HyperelasticForcefield.cpp  HyperelasticForcefield.h  HyperelasticForcefield.inl  HyperelasticForcefield[Hexahedron20].cpp  (+23 more)
unittest/Geometry/: CMakeLists.txt  test_hexahedron.h  test_quad.h  test_segment.h  test_tetrahedron.h  test_triangle.h
unittest/Plugin/: CMakeLists.txt  main.cpp
unittest/SofaCaribou/: CMakeLists.txt  main.cpp  sofacaribou_test.h
(+1003 files in other folders)
